--- a/index.html
+++ b/index.html
@@ -113,7 +113,12 @@
 
       <section class="popup popup-image">
         <div class="popup-image__container">
-          <img id="img" class="popup-image__image" src="" alt="" />
+          <img
+            id="img"
+            class="popup-image__image"
+            src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNgYAAAAAMAASsJTYQAAAAASUVORK5CYII="
+            alt=""
+          />
           <h2 class="popup-image__title"></h2>
           <button class="popup-image__close-btn opacity" type="button"></button>
         </div>
@@ -122,7 +127,12 @@
 
     <template class="element_template">
       <li class="element">
-        <img id="cardimage" class="element__image" src="" alt="" />
+        <img
+          id="cardimage"
+          class="element__image"
+          src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNgYAAAAAMAASsJTYQAAAAASUVORK5CYII="
+          alt=""
+        />
         <div class="element__container">
           <h2 class="element__text"></h2>
           <button
