--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
       </li>
     </template>
 
-    <script type="text/javascript" src="./scripts/data.js"></script>
+    <script type="module" src="./scripts/Card.js"></script>
+    <script type="module" src="./scripts/FormValidator.js"></script>
     <script type="text/javascript" src="./scripts/index.js"></script>
-    <script type="text/javascript" src="./scripts/validate.js"></script>
   </body>
 </html>
