--- a/index.html
+++ b/index.html
@@ -163,9 +163,8 @@
         <button id="trashIcon" class="element__trash-icon opacity"></button>
       </li>
     </template>
-
+    <script type="module" src="./scripts/index.js"></script>
     <script type="module" src="./scripts/Card.js"></script>
     <script type="module" src="./scripts/FormValidator.js"></script>
-    <script type="text/javascript" src="./scripts/index.js"></script>
   </body>
 </html>
