--- a/index.html
+++ b/index.html
@@ -166,5 +166,7 @@
     <script type="module" src="./scripts/index.js"></script>
     <script type="module" src="./scripts/Card.js"></script>
     <script type="module" src="./scripts/FormValidator.js"></script>
+    <script type="module" src="./scripts/utils.js"></script>
+    <script type="module" src="./scripts/data.js"></script>
   </body>
 </html>
