--- a/src/index.html
+++ b/src/index.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./pages/index.css" />
     <title>Mesto</title>
   </head>
   <body class="root">
     <div class="page">
       <header class="header">
         <a href="#"
-          ><img src="./images/logo.svg" class="header__logo" alt="ЛоготипMESTO"
+          ><img
+            src="<%=require('./images/logo.svg')%>"
+            class="header__logo"
+            alt="ЛоготипMESTO"
         /></a>
       </header>
 
@@ -19,7 +21,7 @@
         <section class="profile">
           <div class="profile__card">
             <img
-              src="./images/kysto.jpg"
+              src="<%=require('./images/kysto.jpg')%>"
               alt="Жак-Ив Кусто"
               class="profile__avatar"
             />
@@ -167,7 +169,8 @@
         <button id="trashIcon" class="element__trash-icon opacity"></button>
       </li>
     </template>
-    <script type="module" src="./scripts/index.js"></script>
+    <!-- <script type="module" src="./index.js"></script> -->
+    <!--
     <script type="module" src="./scripts/Card.js"></script>
     <script type="module" src="./scripts/FormValidator.js"></script>
     <script type="module" src="./scripts/utils.js"></script>
@@ -176,6 +179,6 @@
     <script type="module" src="./scripts/Popup.js"></script>
     <script type="module" src="./scripts/PopupWithImage.js"></script>
     <script type="module" src="./scripts/PopupWithForm.js"></script>
-    <script type="module" src="./scripts/UserInfo.js"></script>
+    <script type="module" src="./scripts/UserInfo.js"></script> -->
   </body>
 </html>
