fix: some naming and func

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -11,7 +11,7 @@
       <header class="header">
         <a href="#"
           ><img
-            src="<%=require('./images/logo.svg')%>"
+            src="<%=require('../images/logo.svg')%>"
             class="header__logo"
             alt="ЛоготипMESTO"
         /></a>
@@ -21,7 +21,7 @@
         <section class="profile">
           <div class="profile__card">
             <img
-              src="<%=require('./images/kysto.jpg')%>"
+              src="<%=require('../images/kysto.jpg')%>"
               alt="Жак-Ив Кусто"
               class="profile__avatar"
             />
@@ -64,7 +64,6 @@
               maxlength="40"
               placeholder="Имя"
               type="text"
-              value="Жак-Ив Кусто"
               required
               id="profileAddName"
             />
@@ -76,7 +75,6 @@
               minlength="2"
               maxlength="200"
               type="text"
-              value="Исследователь океана"
               required
               id="profileAddAbout"
             />
