fix: indexHtml mistaces

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -23,11 +23,11 @@
             <div class="profile__picture">
               <div class="overlay-pencil"></div>
               <img
-                src=""
+                src="."
                 alt="Жак-Ив Кусто"
                 class="profile__avatar"
               />
-              <span class="profile__pencil"><img width="26px" height="26px" src="<%=require('../images/pencil.svg')%>" alt="карандаш"></svg></span>
+              <span class="profile__pencil"><img width="26px" height="26px" src="<%=require('../images/pencil.svg')%>" alt="карандаш"/></span>
             </div>
             <div class="profile__info">
               <h1 class="profile__name">Жак-Ив Кусто</h1>
