fix: IndexHtml Inline styles

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -27,7 +27,7 @@
                 alt="Жак-Ив Кусто"
                 class="profile__avatar"
               />
-              <span class="profile__pencil"><img width="26px" height="26px" src="<%=require('../images/pencil.svg')%>" alt="карандаш"/></span>
+              <span class="profile__pencil"><img src="<%=require('../images/pencil.svg')%>" alt="карандаш"/></span>
             </div>
             <div class="profile__info">
               <h1 class="profile__name">Жак-Ив Кусто</h1>
@@ -83,7 +83,7 @@
               id="profileAddAbout"
             />
             <span id="profileAddAbout-error" class="error-span"></span>
-            <button class="form__save-btn opacity" type="submit" disabled>
+            <button class="form__save_btn opacity" type="submit" disabled>
               Сохранить
             </button>
           </form>
@@ -128,7 +128,7 @@
             <span id="inputLinkCardNew-error" class="error-span"></span>
             <button
               id="buttonAddNewCard"
-              class="form__save-btn opacity"
+              class="form__save_btn opacity"
               type="submit"
               disabled
             >
@@ -164,7 +164,7 @@
             <span id="inputLinkAvatarNew-error" class="error-span"></span>
             <button
               id="buttonAddNewAvatar"
-              class="form__save-btn opacity"
+              class="form__save_btn opacity"
               type="submit"
               disabled
             >
@@ -198,7 +198,7 @@
       ></button>
         <button
           id="buttonDeleteCard"
-          class="form__save-btn form__save-btn_submit opacity"
+          class="form__save_btn form__save_btn_submit opacity"
           type="submit"
         >
           Да
