fix: stupid css

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -198,7 +198,7 @@
       ></button>
         <button
           id="buttonDeleteCard"
-          class="form__save_btn form__save_btn_submit opacity"
+          class="form__save_btn form__save_btn_active opacity"
           type="submit"
         >
           Да
