--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -83,7 +83,7 @@
               id="profileAddAbout"
             />
             <span id="profileAddAbout-error" class="error-span"></span>
-            <button class="form__save_btn opacity" type="submit" disabled>
+            <button class="form__save-btn opacity" type="submit" disabled>
               Сохранить
             </button>
           </form>
@@ -128,7 +128,7 @@
             <span id="inputLinkCardNew-error" class="error-span"></span>
             <button
               id="buttonAddNewCard"
-              class="form__save_btn opacity"
+              class="form__save-btn opacity"
               type="submit"
               disabled
             >
@@ -164,7 +164,7 @@
             <span id="inputLinkAvatarNew-error" class="error-span"></span>
             <button
               id="buttonAddNewAvatar"
-              class="form__save_btn opacity"
+              class="form__save-btn opacity"
               type="submit"
               disabled
             >
@@ -198,7 +198,7 @@
       ></button>
         <button
           id="buttonDeleteCard"
-          class="form__save_btn form__save_btn_active opacity"
+          class="form__save-btn form__save-btn_active opacity"
           type="submit"
         >
           Да
