--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -194,15 +194,13 @@
           class="popup__close-btn opacity"
           type="button"
         ></button>
-        <form onsubmit="return false;">
-          <button
-            id="buttonDeleteCard"
-            class="form__save-btn opacity"
-            type="submit"
-          >
-            Да
-          </button>
-        </form>
+        <button
+          id="buttonDeleteCard"
+          class="form__save-btn opacity"
+          type="button"
+        >
+          Да
+        </button>
       </div>
     </div>
 
