--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -196,7 +196,7 @@
         ></button>
         <button
           id="buttonDeleteCard"
-          class="form__save-btn opacity"
+          class="popup__save-btn opacity"
           type="button"
         >
           Да
