--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -22,19 +22,19 @@
           <div class="profile__card">
             <div class="profile__picture">
               <div class="overlay-pencil"></div>
-              <img src="." alt="Жак-Ив Кусто" class="profile__avatar" />
+              <img src="." alt="." class="profile__avatar" />
               <span class="profile__pencil"
                 ><img src="<%=require('../images/pencil.svg')%>" alt="карандаш"
               /></span>
             </div>
             <div class="profile__info">
-              <h1 class="profile__name">Жак-Ив Кусто</h1>
+              <h1 class="profile__name"></h1>
               <button
                 type="button"
                 title="Редактировать профиль"
                 class="profile__edit-button opacity"
               ></button>
-              <p class="profile__about">Исследователь океана</p>
+              <p class="profile__about"></p>
             </div>
           </div>
           <button type="button" class="profile__add-button opacity"></button>
